@@ -37,7 +37,7 @@ a:hover {
 
 <p class="title">CGI-Compress-Gzip</p>
 
-<p class="subtitle">Last update: <a href="gpl/CGI-Compress-Gzip-0.16-docs">v0.16</a>, 2004-01-02</p>
+<p class="subtitle">Last update: <a href="gpl/CGI-Compress-Gzip-0.17-docs">v0.17</a>, 2004-01-08</p>
 
 
 
@@ -66,6 +66,38 @@ modules, although those offer less control to the programmer.
     </tr>
   </thead>
   <tbody>
+    
+      <tr>
+        <td valign="top"><a href="#gpl">GPL</a></td>
+        <td valign="top">
+          <a href="gpl/CGI-Compress-Gzip-0.17.tgz">CGI-Compress-Gzip-0.17.tgz</a>
+          (<a href="gpl/CGI-Compress-Gzip-0.17.tgz.md5">MD5</a>)
+          <br>
+          <a href="gpl/CGI-Compress-Gzip-0.17.zip">CGI-Compress-Gzip-0.17.zip</a>
+          (<a href="gpl/CGI-Compress-Gzip-0.17.zip.md5">MD5</a>)
+          
+            <br>
+            <a href="gpl/CGI-Compress-Gzip-0.17-docs">CGI-Compress-Gzip-0.17-docs</a>
+          
+        </td>
+        <td valign="top">Thu Jan  8 13:25:58 2004</td>
+      </tr>
+    
+      <tr>
+        <td valign="top"><a href="#lic">Clotho</a></td>
+        <td valign="top">
+          <a href="clotho/CGI-Compress-Gzip-0.17.tgz">CGI-Compress-Gzip-0.17.tgz</a>
+          (<a href="clotho/CGI-Compress-Gzip-0.17.tgz.md5">MD5</a>)
+          <br>
+          <a href="clotho/CGI-Compress-Gzip-0.17.zip">CGI-Compress-Gzip-0.17.zip</a>
+          (<a href="clotho/CGI-Compress-Gzip-0.17.zip.md5">MD5</a>)
+          
+            <br>
+            <a href="clotho/CGI-Compress-Gzip-0.17-docs">CGI-Compress-Gzip-0.17-docs</a>
+          
+        </td>
+        <td valign="top">Thu Jan  8 13:25:58 2004</td>
+      </tr>
     
       <tr>
         <td valign="top"><a href="#gpl">GPL</a></td>
