@@ -1,3 +1,9 @@
+2004-01-08 13:24  chris
+
+	* README, lib/CGI/Compress/Gzip.pm, t/gzip.t, t/testhelp: v0.17 *
+	Support -type CGI header flag * Add caveat about explicit use of
+	filehandles
+
 2004-01-02 15:12  chris
 
 	* README, lib/CGI/Compress/Gzip.pm: v0.16 Clean up documentation
@@ -106,10 +112,10 @@
 2003-01-20 14:14  chris
 
 	* COPYRIGHT, Gzip.pm, MANIFEST, Makefile.PL, README, test.pl:
-	Initial revision
+	Initial import
 
 2003-01-20 14:14  chris
 
 	* COPYRIGHT, Gzip.pm, MANIFEST, Makefile.PL, README, test.pl:
-	Initial import
+	Initial revision
 
